edited lecture notes to include service

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -5,18 +5,27 @@
     <title>API Lecture</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
     <script src="/scripts/client.js"></script>
+    <script src="/scripts/pokemon-service.js" charset="utf-8"></script>
+    <link rel="stylesheet" href="/styles/styles.css">
+    <!-- pokeservice comes after client -->
   </head>
   <body ng-app="pokeApp">
     <main ng-controller="PokemonController as pokemon">
       <h1>Pokemon!</h1>
       <ul>
         <li ng-repeat="individualPokemon in pokemon.pokemonList">
-          <button ng-click="pokemon.iChooseYou(individualPokemon)">{{individualPokemon.name}}</button>
-          <img ng-show="individualPokemon.imageUrl"
+          <button ng-class="{active: individualPokemon.chosen}" ng-click="pokemon.iChooseYou(individualPokemon)">{{individualPokemon.name}}</button>
+            <!-- chosen attribute created via iChooseYou -->
+          <!-- <img ng-show="individualPokemon.imageUrl"
                ng-src="{{individualPokemon.imageUrl}}"
-               alt="A cute picture of {{individualPokemon.name}}"/>
+               alt="A cute picture of {{individualPokemon.name}}"/> -->
         </li>
       </ul>
+      <div id="poke-display">
+        <img ng-show="pokemon.currentPokemon.imageUrl"
+             ng-src="{{pokemon.currentPokemon.imageUrl}}"
+             alt="A cute picture of {{pokemon.currentPokemon.name}}"/>
+      </div>
     </main>
   </body>
 </html>
